src/objects/Forecast_Trending_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Converted__c</fullName>
        <label>Amount Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Local__c</fullName>
        <label>Amount Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Date__c</fullName>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Forecast Trending Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Amount__c</columns>
        <columns>Amount_Local__c</columns>
        <columns>Amount_Converted__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Forecast_Category__c</columns>
        <columns>Forecast_Date__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Region__c</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germania_DataHub_and_InfoCenter</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Converted__c</columns>
        <columns>Amount_Local__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Forecast_Category__c</columns>
        <columns>Forecast_Date__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Region__c</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_ID__c</field>
            <operation>equals</operation>
            <value>0068000000lX840</value>
        </filters>
        <label>Germania - DataHub and InfoCenter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FTS-{0000000}</displayFormat>
        <label>Forecast Trending Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Trending Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>